--- a/BA_argo_doc/Manuskript.tex
+++ b/BA_argo_doc/Manuskript.tex
@@ -15,7 +15,7 @@
   \item [ol.control.Control] Elemente die über sichtabe UI Elemente die Interaktion mit der Karte erlauben
   \item [ol.interaction.Interaction] Erlaubt eine Interaktion mit der Karte mit Gesten, Klicks und Tastatureingaben
   \item [ol.layer.Base]  Layers die auf die Map gezeichnet werden können
-  \item [ol.Overlay] Elemente die via HTML auf der Karte gezeichnet werden können
+  \item [ol.Overlay] Elemente die via \gls{HTML} auf der Karte gezeichnet werden können
   \item [ol.View] Representiert die Sicht auf die Karte. Den Ort und das Zoomlevel.
  \end{description}
 \item Elemente sind strickt objektorientiert. 
