--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -252,6 +252,11 @@ System}
 \newacronym{CDF}{CDF}{Common Data Format}
 \newacronym{netCDF}{netCDF}{Network Common Data Format}
 
+\newacronym{DBMS}{DBMS}{Datenbank-Management-System}
+
+\newacronym{ORM}{ORM}{Objektrelationaler Mapper}
+
+
 
 
 \newglossaryentry{Controller}{%
@@ -267,6 +272,16 @@ System}
 \newglossaryentry{FTP}{%
     name={FTP},
     description={File Transfer Protocol. Protokoll zur Übermittlung von Daten}
+}
+
+\newglossaryentry{API}{%
+    name={API},
+    description={Application-Programming-Interface. Programmschnittstelle, die Daten in maschinenlesbarer Form darstellt}
+}
+
+\newglossaryentry{HTML}{%
+    name={HTML},
+    description={Hypertext Markup Language. Beschreibungssprache die häufig für die Inhaltsbeschreibung von Webseiten verwendet wird}
 }
 
 \newglossaryentry{TESAC}{%
@@ -287,5 +302,5 @@ System}
 
 \newglossaryentry{Julian Day}{%
     name={Julianischen Datum},
-    description={(julian day) In der Wissenschaft gebräuchliches Datumsformat über eine Tageszählung (meist 1. Januar 4713 v. Chr.)}
+    description={(julian day) In der Wissenschaft gebräuchliches Datumsformat über die Tageszählung ab einem fixen Startdatum (meist 1. Januar 4713 v. Chr.)}
 }
