--- a/BA_argo_doc/anhang.tex
+++ b/BA_argo_doc/anhang.tex
@@ -5,15 +5,16 @@
 \printnoidxglossaries
 \printglossary[type=\acronymtype]
 
-\subsection{Resultate}
+\section*{Resultate}
 
-\subsubsection{Daten aus der SUS Umfrage}
+\subsection*{Daten aus der SUS Umfrage}
 
 \input{surveydatatable.tex}
 
+\subsection*{Quellcode zur Erzeugung der Graphen}
 
 \begin{python}
- import numpy as np
+import numpy as np
 import seaborn as sns
 import matplotlib.pyplot as plt
 import matplotlib.patches as patches
