doc - Anhang quellcode

--- a/BA_argo_doc/BA_ArgoFloats_main.tex
+++ b/BA_argo_doc/BA_ArgoFloats_main.tex
@@ -29,16 +29,16 @@
 \pagebreak
 \pagestyle{scrheadings}
 \pagenumbering{arabic}
-\setcounter{page}{1}
 \input{einleitung}
-%\include{datengrundlage}
 \include{grundlagen}
 \include{anforderungen}
 \include{systementwurf}
 \include{realisierung}
 \include{testphase}
 \include{auswertung}
-\include{anhang}
+\pagebreak
+\pagestyle{plain}
+\input{anhang}
 \include{literatur}
 
 \end{document}
