--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -236,8 +236,9 @@ breaklinks=true] {hyperref}
 \usepackage{booktabs}
 
 
+\usepackage[xindy,style=super,acronym]{glossaries}
+\addto\captionsngerman{\renewcommand*\acronymname{Abkürzungsverzeichnis}}
 
-\usepackage{glossaries}
 \makenoidxglossaries
 
 \newacronym{JCOMM}{JCOMM}{"`Joint Technical Commission for Oceanography and Marine Meteorology"'}
