--- a/BA_argo_doc/anhang.tex
+++ b/BA_argo_doc/anhang.tex
@@ -1,17 +1,12 @@
 \section{Anhang}
 
-
-
-\printnoidxglossaries
-\printglossary[type=\acronymtype]
-
 \section*{Resultate}
 
 \subsection*{Daten aus der SUS Umfrage}
 
 \input{surveydatatable.tex}
 
-\subsection*{Quellcode zur Erzeugung der Graphen}
+\subsection*{Erzeugung der Umfragegraphen}
 
 \begin{python}
 import numpy as np
@@ -68,3 +63,109 @@ def subplot(data):
 for col in df:
     subplot(df[col])
 \end{python}
+
+\subsection*{Erzeugen des Anforderungsgraphen}
+
+
+\begin{python}
+import networkx as nx
+from networkx.drawing.nx_agraph import write_dot, graphviz_layout
+import pandas as pd
+import numpy as np
+import matplotlib.pyplot as plt
+from matplotlib.patches import Rectangle
+import matplotlib.patches as mpatches
+import matplotlib.patches
+from matplotlib import pylab
+URL_DOC =   "https://docs.google.com/spreadsheets/d/e/2PACX-1vQfFMHK_XVtNXex5pAPh6boF4qdBH0iB6_ndGWV"\
+            "-FANyBXh1TB9MuIQ_Ex7gBlcrGOMO2Tn133NxVf1/pub?gid=0&single=true&output=csv"
+
+color_map = {
+  'kann': 'tomato',
+  'soll': 'orange',
+  'muss': 'green'
+}
+
+anforderungen = pd.read_csv(URL_DOC)
+
+unpack = lambda cell: [c[1:-1] for c in cell.split("|")]
+
+anforderungen_ = [row['Titel'] for i, row in anforderungen.iterrows()]
+nachbedingungen_ = [unpack(row['Nachbedingungen']) for i, row in anforderungen.iterrows()]
+vorbedingungen_ =  ["" if pd.isnull(row['Vorbedingungen']) else unpack(row['Vorbedingungen']) for i, row in anforderungen.iterrows()]
+
+flat_nachbedingungen = [item for sublist in nachbedingungen_ for item in sublist]
+flat_vorbedingungen = [item for sublist in nachbedingungen_ for item in sublist]
+
+
+G = nx.DiGraph()
+G.add_nodes_from(anforderungen_)
+G.add_nodes_from(flat_nachbedingungen)
+
+A = G.subgraph(anforderungen_)
+N = G.subgraph(flat_nachbedingungen)
+
+for i, a in enumerate(anforderungen_):
+    for n in nachbedingungen_[i]:
+        G.add_edge(n,a, weight=1000)
+    for v in vorbedingungen_[i]:
+        G.add_edge(a,v, weight=0.0001)
+
+G = G.reverse()
+A = A.reverse()
+n = N.reverse()
+
+pos=graphviz_layout(G, prog='dot')
+
+plt.figure(3,figsize=(36,40))
+plt.axis('off')
+
+color = [color_map[row['Prioritaet']] for i, row in anforderungen.iterrows()]
+
+nx.draw_networkx_nodes(A, pos, node_shape='s', node_size=10000, node_color=color, alpha=0.6, label=True)
+nx.draw_networkx_nodes(N, pos, node_shape='o', node_size=200, node_color='grey')
+nx.draw_networkx_edges(G, pos, node_shape='o')
+
+x_centr = np.average([p[0] for p in pos.values()])
+
+fontsize = 10
+
+def shift_x(x):
+    align_map = {
+        -1: 'left',
+        1: 'right'
+    }
+    s = 1 if x < x_centr else -1
+    return (align_map[s], x - (s*7))
+
+def shift_y(y):
+    return (y + 20)
+
+def position_string(node):
+    x,y = pos[node]
+    align, x = shift_x(x) if False in N else ('center', x)
+    y = y-10 if  node in N else y
+    y = shift_y(y) if node in A else y
+    return (align,x,y)
+
+for n in G:
+    align,x,y = position_string(n)
+
+    plt.text(x,y,s=n, bbox=dict(facecolor='lightgray', alpha=0.5),
+             horizontalalignment=align,
+             color='black', fontsize=27)
+plt.rcParams["legend.fontsize"] = 22
+plt.legend(handles=[
+    mpatches.Patch(color=color_map['muss'], label='Prioritaet: muss'),
+    mpatches.Patch(color=color_map['kann'], label='Prioritaet: kann'),
+    mpatches.Patch(color=color_map['soll'], label='Prioritaet: soll'),
+    mpatches.Ellipse((1,1), 4, 0, fill=True, label='Nachbedingung', color='grey')
+])
+plt.show()
+\end{python}
+
+
+\pagebreak
+\printnoidxglossaries
+\pagebreak
+\printglossary[type=\acronymtype]
