--- a/BA_argo_doc/preamble.tex
+++ b/BA_argo_doc/preamble.tex
@@ -236,7 +236,8 @@ breaklinks=true] {hyperref}
 \usepackage{booktabs}
 
 
-\usepackage[xindy,style=super,acronym]{glossaries}
+\usepackage[xindy,style=super,acronym, nonumberlist]{glossaries}
+\usepackage{glossaries-extra}
 \addto\captionsngerman{\renewcommand*\acronymname{Abkürzungsverzeichnis}}
 
 \makenoidxglossaries
