doc - zweites Lektoriat 1.5/2

--- a/BA_argo_doc/anforderungen.tex
+++ b/BA_argo_doc/anforderungen.tex
@@ -58,7 +58,7 @@
         Sicherheitsaspekten muss aus der Anwendersicht nur eine normale Rolle zugewiesen werden. Dabei sollen die aktuell als Standard angesehenen Sicherheitsvorkehrungen getroffen werden.
 
     \subsubsection{Administrative Perspektive}
-        Für die Aggregation der Daten ist die Sicherheit ein zentraler Aspekt. Dies umfasst  die Bereiche Authentifizierung und Autorisierung der Administrierenden Personen.
+        Für die Aggregation der Daten ist die Sicherheit ein zentraler Aspekt. Dies umfasst  die Bereiche Authentifizierung und Autorisierung der administrierenden Personen.
 
 
 % END
