--- a/BA_argo_doc/bib.bib
+++ b/BA_argo_doc/bib.bib
@@ -1,5 +1,5 @@
 @article{guinehut2004combining,
-	author = {S Guinehut and PY {Le Traon} and G Larnicol and S Philipps},
+	author = {S. Guinehut and L. Traon and G. Larnicol and S. Philipps},
 	journal = {Journal of Marine Systems},
 	number = {1},
 	pages = {85--98},
@@ -17,7 +17,7 @@
 }
 
 @article{ArgoDataManualConsistencyChecks,
-	author = {Ignaszewski Mark},
+	author = {Mark Ignaszewski},
 	title = {Description of the Argo GDAC File Checks: Data Format and Consistency Checks},
 	volume = {2.4},
 	year = {2016}
@@ -27,7 +27,7 @@
 	howpublished = {\url{http://www.argo.ucsd.edu/Argo_data_and.html}},
 	key = {Argo Data Manual},
 	month = {Jun},
-	note = {[Online; accessed 12. Dec. 2017]},
+	note = {(Aufgerufen am 12.12.2017)},
 	title = {{Argo data and how to get it}},
 	year = {2017}
 }
@@ -36,7 +36,7 @@
 	howpublished = {\url{http://www.argodatamgt.org/Access-to-data/Argo-data-selection}},
 	key = {Argo Data Selection},
 	month = {Dec},
-	note = {[Online; accessed 12. Dec. 2017]},
+	note = {(Aufgerufen am 12.12.2017)},
 	title = {{Argo data selection - Argo Data Management}},
 	year = {2017}
 }
@@ -44,7 +44,7 @@
 @article{OpenLayers,
 	howpublished = {\url{https://openlayers.org/en/latest/apidoc/}},
 	key = {Openlayers API},
-	note = {[Online; accessed 2017-05-28]},
+	note = {(Aufgerufen am 12.12.2017)},
 	title = {Open Layers - API}
 }
 
@@ -52,7 +52,7 @@
 	howpublished = {\url{http://argo.ucsd.edu/Data_viewers.html}},
 	key = {Argo Dataviewers},
 	month = {Apr},
-	note = {[Online; accessed 12. Dec. 2017]},
+	note = {(Aufgerufen am  12.12.2017)},
 	title = {{Global Change Analysis}},
 	year = {2017}
 }
@@ -61,7 +61,7 @@
 	howpublished = {\url{http://www.argodatamgt.org/Documentation}},
 	key = {Argo Data Documentation},
 	month = {Dec},
-	note = {[Online; accessed 12. Dec. 2017]},
+	note = {(Aufgerufen am 12.12.2017)},
 	title = {{Documentation - Argo Data Management}},
 	year = {2017}
 }
@@ -71,6 +71,7 @@
 	howpublished = {\url{http://www.argo.ucsd.edu/Argo_data_guide.pdf}},
 	title = {A beginners{\rq} guide to accessing Argo data},
 	urldate = {2018-01-17},
+	note = {(Aufgerufen am  17.01.2017)},
 	year = {}
 }
 
@@ -84,7 +85,7 @@
 	howpublished = {\url{http://flask.pocoo.org/docs/0.12/}},
 	key = {Flask Documentation},
 	month = {},
-	note = {(Accessed on 09/08/2017)},
+	note = {(Aufgerufen am 12. 12. 2017)},
 	title = {Welcome to Flask --- Flask Documentation (0.12)},
 	year = {}
 }
@@ -102,7 +103,7 @@
 	howpublished = {\url{http://www.seanoe.org/data/00311/42182/}},
 	key = {Argo Data Download},
 	month = {},
-	note = {(Accessed on 10/09/2017)},
+	note = {(Aufgerufen am 12.12.2017)},
 	title = {Argo float data and metadata from Global Data Assembly Centre (Argo GDAC)},
 	year = {}
 }
@@ -125,6 +126,7 @@
 	author = {Gustav Schwab},
 	howpublished = {\url{http://gutenberg.spiegel.de/buch/sagen-des-klassischen-altertums-4962/12}},
 	title = {Die Argonautensage},
+	note = {(Aufgerufen am 12.12.2017)},
 	urldate = {2017-12-12}
 }
 
@@ -136,10 +138,11 @@
 }
 
 @online{FisherNetCDF,
-	author = {Rew AuthorsRuss and Davis Glenn and Emmerson Steve and Davies Harvey and Hartnett Ed and Heimbigner Dennis and Ward Fisher},
+	author = {Rew Russ and Davis Glenn and Emmerson Steve and Davies Harvey and Hartnett Ed and Heimbigner Dennis and Ward Fisher},
 	howpublished = {\url{https://www.unidata.ucar.edu/software/netcdf/docs/index.html}},
 	title = {NetCDF: Introduction and Overview},
-	urldate = {2017-12-13}
+	urldate = {2017-12-13},
+	note = {(Aufgerufen am 13.12.2017)}
 }
 
 @article{rew1990netcdf,
@@ -157,7 +160,8 @@
 	howpublished = {\url{https://docs.scipy.org/doc/numpy-1.13.0/reference/maskedarray.generic.html}},
 	key = {numpy\_ma},
 	title = {The numpy ma module - NumPy v1.13 Manual},
-	urldate = {2017-12-26}
+	urldate = {2017-12-26},
+	note = {(Aufgerufen am 36.12.2017)}
 }
 
 @misc{openingtheflask,
@@ -167,6 +171,7 @@
 	year = {2011},
 	howpublished = {\url{http://mitsuhiko.pocoo.org/flask-pycon-2011.pdf}},
 	urldate = {2018-01-13}
+	note = {(Aufgerufen am 13.01.2017)}
 }
 
 @book{openlayersbeginnersguide,
@@ -183,7 +188,7 @@ title = {Query API — SQLAlchemy 1.2 Documentation},
 howpublished = {\url{http://docs.sqlalchemy.org/en/latest/orm/query.html}},
 month = {},
 year = {},
-note = {(Accessed on 02/08/2018)}
+note = {(Aufgerufen am 08. 02. 2018)}
 }
 
 @article{moore1998cramming,
@@ -200,7 +205,7 @@ note = {(Accessed on 02/08/2018)}
 @inproceedings{ireland2009classification,
   title={A classification of object-relational impedance mismatch},
   author={Ireland, Christopher and Bowers, David and Newton, Michael and Waugh, Kevin},
-  booktitle={Advances in Databases, Knowledge, and Data Applications, 2009. DBKDA'09. First International Conference on},
+  booktitle={Advances in Databases, Knowledge, and Data Applications.},
   pages={36--43},
   year={2009},
   organization={IEEE}
@@ -219,7 +224,7 @@ title = {Mapping Objects to Relational Databases: O/R Mapping In Detail},
 howpublished = {\url{http://agiledata.org/essays/mappingObjects.html}},
 month = {Apr},
 year = {2013},
-note = {(Accessed on 02/20/2018)}
+note = {(Aufgerufen am 20.02.2018)}
 }
 
 @misc{zzzeekPa13:online,
@@ -228,7 +233,7 @@ title = {zzzeek : Patterns Implemented by SQLAlchemy},
 howpublished = {\url{http://techspot.zzzeek.org/2012/02/07/patterns-implemented-by-sqlalchemy/}},
 month = {Feb},
 year = {2002},
-note = {(Accessed on 02/20/2018)}
+note = {(Aufgerufen am 20.02.2018)}
 }
 
 @misc{Ng2014,
@@ -238,7 +243,7 @@ note = {(Accessed on 02/20/2018)}
   publisher = {GitHub},
   journal = {GitHub repository},
   howpublished = {\url{https://github.com/jumpinjackie/bootstrap-viewer-template}},
-  commit = {fcb15e70488f396311e4b22c7ef4213a70700dd4}
+  commit = {fcb15e70488f396311e4b22c7ef4213a70700dd4},
 }
 
 @misc{sundstrm16,
@@ -253,12 +258,12 @@ note = {(Accessed on 02/20/2018)}
 
 
 @misc{RFC7946T7,
-    author = {Butler, et al.},
+    author = {H. Butler and M. Daly and A. Doyle and S. Gillies and S. Hagen and T. Schaub},
     title = {RFC 7946 - The GeoJSON Format},
     howpublished = {\url{https://tools.ietf.org/html/rfc7946}},
     month = {August},
     year = {2016},
-    note = {(Accessed on 03/01/2018)}
+    note = {(Aufgerufen am  03.01.2018)}
 }
 
 @book{witte2011vermessungskunde,
@@ -276,5 +281,5 @@ title = {Quantitative Usablility-Analysen mit der System Usability Scale (SUS)},
 howpublished = {\url{https://blog.seibert-media.net/blog/2011/04/11/usablility-analysen-system-usability-scale-sus/}},
 month = {April},
 year = {2011},
-note = {(Accessed on 03/06/2018)}
+note = {(Aufgerufen am  06.03.2018)}
 }
