doc - zweites Lektoriat 2/2

--- a/BA_argo_doc/testphase.tex
+++ b/BA_argo_doc/testphase.tex
@@ -169,31 +169,33 @@ Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
 
 
 \paragraph{\texttt{Statement 1:} "`Ich kann mir gut vorstellen, ArgoData regelmäßig zu nutzen."'}
-    Diese Frage zielt auf die Wiederbesuchsbereitschaft ab. Die Antworten weisen eine breite Streuung auf. Die am häufigsten gegebene Antwort liegt bei 4 (4 von 12 Personen). Der Median liegt bei 3, das arithmetische Mittel befindet sich bei 2.67. Die Box umfasst die Antworten 2 bis 4. Der Whisker schließt Antwort 1 mit ein.
+    Diese Frage zielt auf die Wiederbesuchsbereitschaft ab. Die Antworten weisen eine breite Streuung auf. Die am häufigsten gegebene Antwort liegt bei 4 (4 von 12 Personen). Der Median liegt bei 3, das arithmetische Mittel befindet sich bei $2.67$. Die Box umfasst die Antworten 2 bis 4. Der Whisker schließt Antwort 1 mit ein.
 
  \paragraph{\texttt{Statement 2:} "`Ich empfinde ArgoData als unnötig komplex."'}
-    In dieser Frage, bildet sich die Reduktion der Komplexität ab. Dire Antworten finden sich hier im bereich 1 bis 3. Das Maximum liegt mit einem Wert von 7 in der Antwort 1. Der Median liegt bei 1, das arithmetische Mittel bei knapp über 1.5. Die Box umfasst die Antworten 1 bis 2. Der Whisker schließt Antwort 3 mit ein.
+    In dieser Frage, bildet sich die Reduktion der Komplexität ab.
+    Die am häufigsten gegebene Antwort liegt bei 1 (7 von 12 Personen).  Der Median liegt bei 1, das arithmetische Mittel bei knapp über $1.67$. Die Box umfasst die Antworten 1 bis 2. Der Whisker schließt Antwort 3 mit ein.
 
   \paragraph{\texttt{Statement 3:} "`Ich empfinde ArgoData als einfach zu nutzen."'}
-    Durch diese Frage wird die Einfachheit der Darstellung und die Reduktion der Benutzungskomplexität abgebildet. Die Antworten finden sich hier im Bereich 3 bis 5. Das Maximum liegt mit 6 Antworten klar bei Antwort 5. Die Box umfasst Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
+    Durch diese Frage wird die Einfachheit der Darstellung und die Reduktion der Benutzungskomplexität abgebildet. Die am häufigsten gegebene Antwort liegt bei 5 (6 von 12 Personen). Der Median liegt bei $4.5$, das arithmetische Mittel bei $4.25$   Die Box umfasst Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
 
 \paragraph{\texttt{Statement 4:} "`Ich denke, dass ich Hilfestellung bei der Benutzung brauchen würde um ArgoData zu benutzen."'}
-    Diese Frage ermittelt ob genügend Hilfestellung zur Verfügung gestellt wurde.  Die Antworten finden sich im Bereich 1 bis 4. Das Maximum von 4 findet sich in den Antworten 1 und 3.  Der Median liegt bei 2.5, das arithmetische Mittel liegt zwischen 2.5 und 2. Die Box umfasst Antworten 1 bis 3, der Whisker schließt Antwort 4 mit ein.
+    Diese Frage ermittelt ob genügend Hilfestellung zur Verfügung gestellt wurde.  Die am häufigsten gegebene Antworten liegen bei 1 und 3 (4 von 12 Personen).  Der Median liegt bei 2.5, das arithmetische Mittel liegt bei $2.33$. Die Box umfasst Antworten 1 bis 3, der Whisker schließt Antwort 4 mit ein.
 
 \paragraph{\texttt{Statement 5:} "`Ich finde, dass die Funktionen (Karte, Steuerung, Anzeige von Daten) gut integriert sind."'}
-    Diese Frage ermittelt die Integration der Steuerungselemente. Hier finden sich die Antworten zwischen 3 und 5. Das Maximum liegt mit einem Wert von 6 bei Antwort 4. Der Median liegt bei 4, das arithmetische Mittel zwischen 4 und 4.5. Die Box umfasst  die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
+    Diese Frage ermittelt die Integration der Steuerungselemente. 
+    Die am häufigsten gegebene Antwort liegt bei 4 (6 von 12 Personen). Der Median liegt bei 4, das arithmetische Mittel bei $4.33$. Die Box umfasst  die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
 
 \paragraph{\texttt{Statement 6:} "`Ich finde, dass es in ArgoData zu viele Inkonsistenzen gibt."'}
-    Diese Frage zielt auf die Integration der Komponenten als Gesamtkonzept ab. Die Antworten finden sich von 1 bis 3. Das Maximum liegt mit 5 bei Antwort 2. Der Median liegt bei 2, das arithmetische Mittel liegt leicht darüber. Die Box umfasst Antworten 2 und 3. Der Whisker schließt Antwort 1 mit ein.
+    Diese Frage zielt auf die Integration der Komponenten als Gesamtkonzept ab. Die am häufigsten gegebene Antwort liegt bei Antwort 2 (5 von 12 Personen). Der Median liegt bei 2, das arithmetische Mittel bei $2.92$. Die Box umfasst Antworten 2 und 3. Der Whisker schließt Antwort 1 mit ein.
 
 \paragraph{\texttt{Statement 7:} "`Ich kann mir vorstellen, dass die meisten Leute ArgoData schnell zu beherrschen lernen."'}
-    Diese Frage versucht über eine extrene Perspektive die Lernkurve bei der Benutzung abzufragen. Die Antworten finden sich im Bereich 3 bis 5. Das Maximum liegt mit 6 bei Antwort 5. Der Median liegt bei 4.5, das arithmetische Mittel liegt knapp darunter. Die Box umfasst die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
+    Diese Frage versucht über eine extrene Perspektive die Lernkurve bei der Benutzung abzufragen.Die am häufigsten gegebene Antwort liegt bei 5 (6 von 12 Personen). Der Median liegt bei 4.5, das arithmetische Mittel bei $4.42$. Die Box umfasst die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
 
 \paragraph{\texttt{Statement 8:} "`Ich empfinde die Bedienung als sehr umständlich."'}
-    Diese Frage versucht das Erleben des Bedienungskonzeptes zu erfragen. Die Antworten finden sich im Bereich 1 bis 3. Das Maximum liegt mit 7 bei Antwort 2. Der Median liegt bei 2, das arithmetische Mittel im Bereich zwischen 1.5 und 2. Die Box umfasst die Antworten 1 und 2. Der Whisker schließt Antwort 3 mit ein.
+    Diese Frage versucht das Erleben des Bedienungskonzeptes zu erfragen. Die am häufigsten gegebene Antwort liegt bei 2 (7 von 12 Personen). Der Median liegt bei 2, das arithmetische Mittel bei $1.75$ Die Box umfasst die Antworten 1 und 2. Der Whisker schließt Antwort 3 mit ein.
 
 \paragraph{\texttt{Statement 9:} "`Ich musste eine Menge Dinge lernen, bevor ich mit ArgoData arbeiten konnte."'}
-    Diese Frage ermittelt die Lernkurve die zur Benutzung notwendig ist. Hier finden sich die Antworten im Bereich von 1 bis 4. Das Maximum liegt mit 9 von 12 Antworten bei 1. Der Median liegt bei Antwort 1, das arithmetische Mittel bei ca. 1.5. Die Box umfasst Antwort 1, der Whisker schließt keine weiteren Antworten mit ein, diese sind damit als Ausreißer zu betrachten.
+    Diese Frage ermittelt die Lernkurve die zur Benutzung notwendig ist. Die am häufigsten gegebene Antwort ist die 1 (9 von 12 Personen). Der Median liegt bei Antwort 1, das arithmetische Mittel bei $1.5$. Die Box umfasst Antwort 1, der Whisker schließt keine weiteren Antworten mit ein, diese sind damit als Ausreißer zu betrachten.
 
 \subsubsection{Interpretation der Ergebnisse}
 Die Antworten sind durchwegs als positiv zu betrachten. Die Fragen zur Komplexität lassen erkennen, dass es gelungen ist, die wissenschaftlichen Daten ohne Vorkenntnisse verstehbar darzustellen. Die Bedienungsmuster wurden angenommen und als konsistent und wenig umständlich beschrieben. Die Frage zur Wiederbesuchsbereitschaft weist eine starke Streuung auf. Da es sich um eine Seite mit einem Bildungsangebot handelt, ist dies erklärbar.
