doc - Umfrageplots überarbeitet

--- a/BA_argo_doc/testphase.tex
+++ b/BA_argo_doc/testphase.tex
@@ -173,7 +173,7 @@ Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
 
  \paragraph{\texttt{Statement 2:} "`Ich empfinde ArgoData als unnötig komplex."'}
     In dieser Frage, bildet sich die Reduktion der Komplexität ab.
-    Die am häufigsten gegebene Antwort liegt bei 1 (7 von 12 Personen).  Der Median liegt bei 1, das arithmetische Mittel bei knapp über $1.67$. Die Box umfasst die Antworten 1 bis 2. Der Whisker schließt Antwort 3 mit ein.
+    Die am häufigsten gegebene Antwort liegt bei 1 (7 von 12 Personen).  Der Median liegt bei 1, das arithmetische Mittel bei $1.67$. Die Box umfasst die Antworten 1 bis 2. Der Whisker schließt Antwort 3 mit ein.
 
   \paragraph{\texttt{Statement 3:} "`Ich empfinde ArgoData als einfach zu nutzen."'}
     Durch diese Frage wird die Einfachheit der Darstellung und die Reduktion der Benutzungskomplexität abgebildet. Die am häufigsten gegebene Antwort liegt bei 5 (6 von 12 Personen). Der Median liegt bei $4.5$, das arithmetische Mittel bei $4.25$   Die Box umfasst Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
@@ -186,7 +186,7 @@ Im Folgenden findet sich eine detaillierte Auswertung der hier erhobenen Daten:
     Die am häufigsten gegebene Antwort liegt bei 4 (6 von 12 Personen). Der Median liegt bei 4, das arithmetische Mittel bei $4.33$. Die Box umfasst  die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
 
 \paragraph{\texttt{Statement 6:} "`Ich finde, dass es in ArgoData zu viele Inkonsistenzen gibt."'}
-    Diese Frage zielt auf die Integration der Komponenten als Gesamtkonzept ab. Die am häufigsten gegebene Antwort liegt bei Antwort 2 (5 von 12 Personen). Der Median liegt bei 2, das arithmetische Mittel bei $2.92$. Die Box umfasst Antworten 2 und 3. Der Whisker schließt Antwort 1 mit ein.
+    Diese Frage zielt auf die Integration der Komponenten als Gesamtkonzept ab. Die am häufigsten gegebene Antwort liegt bei Antwort 2 (5 von 12 Personen). Der Median liegt bei 2, das arithmetische Mittel bei $2.08$. Die Box umfasst Antworten 2 und 3. Der Whisker schließt Antwort 1 mit ein.
 
 \paragraph{\texttt{Statement 7:} "`Ich kann mir vorstellen, dass die meisten Leute ArgoData schnell zu beherrschen lernen."'}
     Diese Frage versucht über eine extrene Perspektive die Lernkurve bei der Benutzung abzufragen.Die am häufigsten gegebene Antwort liegt bei 5 (6 von 12 Personen). Der Median liegt bei 4.5, das arithmetische Mittel bei $4.42$. Die Box umfasst die Antworten 4 und 5. Der Whisker schließt Antwort 3 mit ein.
