doc - Ausblick Erweiterungen

--- a/BA_argo_doc/testphase.tex
+++ b/BA_argo_doc/testphase.tex
@@ -86,7 +86,7 @@ Wie in Abbildung \ref{fig:ftest004} zu erkennen ist, wird der zwischen zwei Mess
  \centering
  \includegraphics[width=0.35\textwidth]{pix/ftest/00fail.png}
 
- \caption{\textbf{Funktionstest VI} Fehlerhafte Daten werden markiert}
+ \caption{\textbf{Funktionstest VII} Fehlerhafte Daten werden markiert}
  \label{fig:ftest00fail}
 \end{wrapfigure}
 
@@ -119,7 +119,9 @@ Datafolder: /root/aoml/
 Process finished.
 This took  7381 seconds.
 We had a downtime of 11 seconds.
-So long and thanks for all the fish. Bye.
+So long and thanks for all the fish. 
+
+    EOS
 \end{python}
 
 \begin{description}
