--- a/BA_argo_doc/anhang.tex
+++ b/BA_argo_doc/anhang.tex
@@ -13,52 +13,69 @@ import numpy as np
 import seaborn as sns
 import matplotlib.pyplot as plt
 import matplotlib.patches as patches
-
+from matplotlib.ticker import AutoMinorLocator
+from matplotlib.font_manager import FontProperties
 
 plt.style.use('fivethirtyeight')
 
 def subplot(data):
     bins=[1,2,3,4,5]
-    x = [data.value_counts()[x] if x in data.value_counts() else 0 for x in bins]
+    y = [data.value_counts()[x] if x in data.value_counts() else 0 for x in bins]
 
     f, (ax_box, ax_hist) = plt.subplots(2, sharex=True, gridspec_kw={"height_ratios": (.1, .86)})
     f.set_figwidth(20)
     f.set_figheight(2.3)
 
-    whisker = sns.boxplot(data.values,
-                          ax=ax_box,showmeans=True,
-                          meanline=True, color="white",
+    whisker = sns.boxplot(data.values, 
+                          ax=ax_box,showmeans=True, 
+                          meanline=True, color="white", 
                           meanprops=dict(color='darkgrey', linestyle='-', linewidth=2.5,))
-    ax_hist.bar(bins, x, color="darkgrey")
+    ax_hist.bar(bins, y, color="darkgrey")
     ax_box.set(yticks=[])
 
     sns.despine(ax=ax_hist)
     sns.despine(ax=ax_box, left=False)
 
-    f.suptitle(data.name, fontsize=16)
-
-    left, width = -.07, 1.05
-    bottom, height = -0.09, .3
+    f.suptitle(data.name, fontsize=16)   
+    
+    left, width = -.06, 1
+    bottom, height = -0.09, .33
     right = left + width
     top = bottom + height
-
     p = patches.Rectangle(
-    (left, bottom), width, height,
-    fill=False, transform=ax_hist.transAxes, clip_on=False
+        (left, bottom), width, height,
+        fill=False, transform=ax_hist.transAxes, clip_on=False
     )
-
+      
+    font = FontProperties()
+    font.set_weight('bold')
+    font.set_size(18)  
+    bbox = dict(facecolor='whitesmoke', edgecolor='grey', pad=0.2, boxstyle='round')
     ax_hist.text(right, height, 'sehr',
         horizontalalignment='center',
         verticalalignment='top',
         transform=ax.transAxes,
-        fontsize=18)
-
+        fontproperties=font,
+        color = 'dimgray',
+        backgroundcolor='whitesmoke', 
+        bbox=bbox)
     ax_hist.text(left, height, 'gar nicht',
         horizontalalignment='center',
         verticalalignment='top',
         transform=ax.transAxes,
-        fontsize=18)
-
+        fontproperties=font,
+        color = 'dimgray',
+        backgroundcolor='whitesmoke', 
+        bbox=bbox)
+    
+    plt.yticks(np.arange(0, 9+1, 3.0))
+    ax_hist.set_ylim([0,9])
+    ax_hist.minorticks_on()
+    ax_hist.xaxis.grid(False)
+    ax_hist.yaxis.grid(b=False, which='minor', color='lightgray', linestyle='-')
+    ax_hist.yaxis.set_minor_locator(AutoMinorLocator(3))
+    ax_hist.yaxis.grid(b=True, which='major', color='darkgray', linestyle='-', markersize=1)
+    ax_box.xaxis.grid(True)    
 
 for col in df:
     subplot(df[col])
