--- a/BA_argo_doc/auswertung.tex
+++ b/BA_argo_doc/auswertung.tex
@@ -18,20 +18,25 @@ Bei der Aggregation wurde stark auf die Modularität der Anwendung geachtet. Obj
 
 \subsection{Erweiterungsmöglichkeiten}
 
-Der hier ausgearbeite Prozess der Datenüberführung ist stark monolytisch und statisch ausgelegt. Es werden immer alle Daten erneuert, auch wenn dieser bereits in der Datenhaltung vorhanden sind. Dies ist als verbesserungswürdig anzusehen, da hier zum einen unnötige Schreibzugriffe stattfinden und zum anderen die Überführung der Daten in die produktive Datenhaltung Ausfallzeiten hervorrufen. Durch einen ständig laufenden Microservice, der die Daten nur auf Veränderungen hin untersucht und diese Nachträgt könnte die Anwendung somit stark verbessert werden. 
-
+Der hier ausgearbeite Prozess der Datenüberführung ist stark monolytisch und statisch ausgelegt. Die Erneuerung wird immer über den gesamten Datensatz ausgeführt.
+Dies ist aus zwei Gesichtspunkten als verbesserungswürdig anzusehen. Zum einen finden redundante Schreibzugriffe statt. Zum anderen wird durch den Schreibvorgang in die produktive Datenhaltung eine kurzzeitige Ausfallzeit des Webservices hervorgerufen.
+Ein Microservice, der die Daten auf Veränderungen überwacht und nur alternierende Daten erneuert, wäre aus diesen Gesichtspunkten eine sinnvolle Weiterentwicklung der Plattform. 
+\\
 
 Durch die Usability Umfrage wurde ermittelt, dass sich die Benutzer verloren fühlten, bzw. eine Hilfestellung erwartet hätten. Hier könnte man durch ein Interface-Overlay oder der initialen Anzeige eines Hilfsmodals eine bessere Hilfestellung leisten.
+\\
 
 Die Anforderung der Messdaten und das Erstellen des Funktionsplots erfordert nach jedem Klick einige Sekunden, bis die Daten zur Anzeige gebracht werden. Dadurch wirkt die Darstellung schwerfällig und träge. Diesem könnte man durch einen Caching-Prozess entgegenwirken. Ein weiterer spannender Ansatz wäre das proaktive Laden von Datensätzen durch Ermittlung der Mauszeigerposition noch bevor der Datensatz angeklickt wurde. Dies könnte durch Maschinelles Lernen sogar noch weiter Verfeinert werden. Besonders die Kombination von Caches und dem proaktiven Laden der Daten könnte hier starke Verbesserung in der Seitengeschwindigkeit bringen. 
+\\
 
+Es hat sich gezeigt, dass es schwierig ist, zwischen den Messpunkten auf der Karte und den Positionen der Funktionsplots eine geistige Verbindung herzustellen. Aus diesem Gesichtspunkt wäre es eine sinnvolle Erweiterung der Applikation, die Graphen über eine auf JavaScript aufbauende Lösung auszutauschen. Damit wäre es möglich, die Position des Mauszeigers in Karte und Graph zu ermitteln und die Position im Messverlauf im jeweils anderen Element hervorzuheben.  
 
 
 \newpage
 
 
 \vspace*{\fill}\thispagestyle{plain}
-Der echte Zug des Wissens ist nichts Statisches, das man anhalten und in Teile zerlegen kann. Er ist immer in Fahrt. Auf einem Gleis namens Qualität. Und die Lok und die 120 Güterwagen fahren nie woanders hin, als wo das Gleis der Qualität sie hinführt.
+"`Der echte Zug des Wissens ist nichts Statisches, das man anhalten und in Teile zerlegen kann. Er ist immer in Fahrt. Auf einem Gleis namens Qualität. Und die Lok und die 120 Güterwagen fahren nie woanders hin, als wo das Gleis der Qualität sie hinführt."'
 \\
 \hrulefill \vspace{0.3cm}
 \textbf{Robert M. Pirsing} -- \textit{Zen und die Kunst ein Motorrad zu warten}
